--- a/GRP Sub Tests/Base.lproj/Main.storyboard
+++ b/GRP Sub Tests/Base.lproj/Main.storyboard
@@ -25,21 +25,31 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HUY-cW-0QY">
-                                <rect key="frame" x="20" y="49" width="560" height="531"/>
+                                <rect key="frame" x="20" y="49" width="560" height="505"/>
                                 <animations/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oat-rF-gq4">
+                                <rect key="frame" x="231" y="562" width="139" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Reload"/>
+                                <connections>
+                                    <action selector="reloadPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y0e-S6-ZaB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="HUY-cW-0QY" firstAttribute="top" secondItem="VbQ-vA-tEq" secondAttribute="bottom" constant="8" id="3ag-Gq-DQM"/>
                             <constraint firstItem="VbQ-vA-tEq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="44w-B8-STH"/>
+                            <constraint firstItem="Oat-rF-gq4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="78B-Qr-I6t"/>
                             <constraint firstItem="HUY-cW-0QY" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="GA4-OP-yx2"/>
+                            <constraint firstItem="Oat-rF-gq4" firstAttribute="top" secondItem="HUY-cW-0QY" secondAttribute="bottom" constant="8" id="T18-20-xNS"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Oat-rF-gq4" secondAttribute="bottom" constant="8" id="dte-n4-RYE"/>
                             <constraint firstItem="VbQ-vA-tEq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="idH-NC-uqF"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HUY-cW-0QY" secondAttribute="bottom" constant="20" id="iwm-Mi-Pd8"/>
                             <constraint firstItem="HUY-cW-0QY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="lVD-Hg-ZvN"/>
                         </constraints>
                     </view>
